tests/valid/functions.m
function [a, b] = test_good()
end

function [a] = test_good()
end

function [] = test_good()
end

function a = test_good()
end

function test_good()
end
