tests/invalid/end_keyword.m
% end is a keyword
end = 3;
%%%%%%%%%%
end();
